--- a/config.yml
+++ b/config.yml
@@ -29,9 +29,9 @@ pipeline: null
 #   - name: ResponseSelector
 #     epochs: 100
 #     constrain_similarities: true
-  - name: FallbackClassifier
-    threshold: 0.3
-    ambiguity_threshold: 0.1
+#   - name: FallbackClassifier
+#     threshold: 0.3
+#     ambiguity_threshold: 0.1
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
